<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dummy_profile"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/dummy_image" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:gravity="bottom"
        android:layout_weight="1"
        />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_weight="4"
    android:id="@+id/info_container">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_username"
        android:layout_marginTop="50dp"
        android:autofillHints="Enter Your Username"
        android:inputType="text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_submit"
            android:text="@string/submit"
            android:layout_gravity="center"
            android:backgroundTint="@color/purple_500"
            android:layout_marginTop="8dp"
            />
</LinearLayout>
</LinearLayout>